set up web page title and favicon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<script>
-alert("Hello World");
-</script>
+<link rel="shortcut icon" href="favicon.ico"/>
+<title>魔堂圣域</title>
 <html>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+
+<script>
+
+</script>
