--- a/lmx.html
+++ b/lmx.html
@@ -1,21 +1,36 @@
-牛奶不致癌: 
-1. http://www.guokr.com/article/2289/
-2. http://www.guokr.com/article/70056/
-3. http://www.guokr.com/blog/450669/
+<link rel="shortcut icon" href="favicon2.ico"/>
 
-转基因:
-1. http://www.guokr.com/post/556401/
-2. http://www.guokr.com/article/438078/
-3. http://www.guokr.com/article/437430/
-4. http://www.guokr.com/question/231771/
+<title>给刘梦夏夏的~</title>
+
+<body>
+
+<h1>牛奶不致癌: </h1>
+<pre>
+<a href="http://www.guokr.com/article/2289/">1. 牛奶致癌？</a>
+<a href="http://www.guokr.com/article/70056/">2. 解析牛奶致癌说——酪蛋白的谜团</a>
+<a href="http://www.guokr.com/blog/450669/">3. 【果壳收藏夹】牛奶，你喝不喝？</a>
+</pre>
+<h1>转基因:</h1>
+<pre>
+<a href="http://www.guokr.com/post/556401/">1. 【转基因谣言TOP10】</a>
+<a href="http://www.guokr.com/article/438078/">2. 崔永元转基因纪录片中的科学错误</a>
+<a href="http://www.guokr.com/article/437430/">3. 人们为什么不相信转基因？</a>
+<a href="http://www.guokr.com/question/231771/">4. 天涯的「如何鉴别转基因大米和非转基因大米」文章，有哪些不科学之处？</a>
+
 所谓种了转基因以后只能种转基因:
 谣言变化路径:
 种转基因,大量是用更无毒的除草剂,杂草抗药性变强
 -> 种转基因造成超级大草
 -> 种了转基因以后只能种一样的转基因:
-http://www.guokr.com/article/437230/
+</pre>
+<a href="http://www.guokr.com/article/437230/">《自然》特刊：转基因作物的事实与谣传</a>
+<pre>
+其实没有人能证明转基因是完全无害的,我们应该中立的看待转基因,而不是轻易的相信那些不负责任信口开河居心叵测的谣言贴
+</pre>
 
-人工淀粉:
-1. http://zhidao.baidu.com/question/54722419.html
-2. http://zhidao.baidu.com/question/202739986.html
-
+<h1>人工淀粉:<h1>
+<pre>
+<a href="http://zhidao.baidu.com/question/54722419.html">1. 人工合成叶绿素是困难的</a>
+<a href="http://zhidao.baidu.com/question/202739986.html">2. 合成淀粉的成本也提取高</a>
+</pre>
+</body>
