add css for lmx.html

--- a/lmx.html
+++ b/lmx.html
@@ -1,4 +1,5 @@
-<link rel="shortcut icon" href="favicon2.ico"/>
+<link rel="shortcut icon" href="lmx.ico"/>
+<link rel="stylesheet" href="lmx.css">
 
 <title>给刘梦夏夏的~</title>
 
