--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,3 +1,3 @@
-<a href="WangziHairCutAdmin.plist">
-    click this link to install
+<a href="https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
+    click this link to install Demo
 </a>
