update hper link

--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,3 +1,4 @@
-<a href="https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
+<a href="itms-services://?action=download-manifest&amp;
+    url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
     click this link to install Demo
 </a>
