try different path

--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,4 +1,4 @@
 <a href="itms-services://?action=download-manifest&amp;
-    url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
+    url=WangziHairCutAdmin.plist">
     click this link to install Demo
 </a>
