try different path

--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,4 +1,3 @@
-<a href="itms-services://?action=download-manifest&amp;
-    url=WangziHairCutAdmin.plist">
-    click this link to install Demo
+<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
+    click this link to install Demo app
 </a>
