--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,3 +1,10 @@
-<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
-    click this link to install Demo app
-</a>
+<html>
+<body>
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
+	    click this link to install Demo app
+	</a>
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/Aurora.plist">
+	    click this link to install Aurora
+	</a>
+</body>
+</html?
