try another IPA

--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -4,8 +4,9 @@
 	    click this link to install Demo app
 	</a>
 	<br>
-	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/Aurora.plist">
-	    click this link to install Aurora
+	<br>
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/Aurora.plist" fontsize= 13>
+	    click this link to install siliSelector
 	</a>
 </body>
 </html?
