--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -5,7 +5,7 @@
 	</a>
 	<br>
 	<br>
-	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/Aurora.plist" fontsize= 13>
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/siliSelector.plist" fontsize= 13>
 	    click this link to install siliSelector
 	</a>
 </body>
