--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -5,8 +5,8 @@
 	</a>
 	<br>
 	<br>
-	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/siliSelector.plist" font size=13>
-	    click this link to install siliSelector
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/siliSelector.plist">
+	    <font size=6>click this link to install siliSelector</font>
 	</a>
 </body>
 </html?
