keep testing IPA

--- a/WZHairCut.html
+++ b/WZHairCut.html
@@ -1,7 +1,9 @@
 <html>
 <body>
+	<br>
+	<br>
 	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/WangziHairCutAdmin.plist">
-	    click this link to install Demo app
+	    <font size=6>click this link to install Demo app</font>
 	</a>
 	<br>
 	<br>
