--- a/NewsLoopAppLinkTest.html
+++ b/NewsLoopAppLinkTest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta property="al:ios:url" content="example://applinks" />
+    <meta property="al:ios:url" content="newsloop://applinks" />
     <meta property="al:ios:app_store_id" content="527836708" />
     <meta property="al:ios:app_name" content="NewsLoop" />
     <!-- Other headers -->
