change the app name

--- a/NewsLoopAppLinkTest.html
+++ b/NewsLoopAppLinkTest.html
@@ -2,7 +2,7 @@
 <head>
     <meta property="al:ios:url" content="newsloop://applinks" />
     <meta property="al:ios:app_store_id" content="527836708" />
-    <meta property="al:ios:app_name" content="NewsLoop" />
+    <meta property="al:ios:app_name" content="StagingNewsLoop" />
     <!-- Other headers -->
 </head>
 <!-- Other HTML content -->
