a deep linking test

--- a/NewsLoopAppLinkTest.html
+++ b/NewsLoopAppLinkTest.html
@@ -8,4 +8,6 @@
 <!-- Other HTML content -->
 
 <font size=9> this is just a test page for NewsLoop app linking</font>
+
+<a href="newsloop://open?&nlarticleid=4759465">this is a test for app deep linking</a>
 </html>
