--- a/lmx.html
+++ b/lmx.html
@@ -34,4 +34,20 @@
 <a href="http://zhidao.baidu.com/question/54722419.html">1. 人工合成叶绿素是困难的</a>
 <a href="http://zhidao.baidu.com/question/202739986.html">2. 合成淀粉的成本也提取高</a>
 </pre>
+<p/>
+<p/>
+<p/>
+<p/>
+<p/>
+<p/>
+<p/>
+<p/>
+<pre>
+其实睡醒的时候 还是会担心你昨晚有没有睡好 有些话就留在这里吧 因为你肯定不会记得还有这么一个地方的 
+看到知乎上有人提问 女朋友不喜欢看书怎么让她喜欢
+而回答说的是 找到两个人互相欣赏的点 就好了啊 不必强求对方就是soulmate 所以是我强求了么
+昨天他们又吵架了 莫名其妙的就吵架了 然后晚上又很好的开始嬉闹 
+愈发的确定这不是我想要的 而我还是觉得我们的不同比他们还大 
+一定要照顾好自己 一直都好好的
+</pre>
 </body>
