--- a/lmx.html
+++ b/lmx.html
@@ -48,6 +48,12 @@
 而回答说的是 找到两个人互相欣赏的点 就好了啊 不必强求对方就是soulmate 所以是我强求了么
 昨天他们又吵架了 莫名其妙的就吵架了 然后晚上又很好的开始嬉闹 
 愈发的确定这不是我想要的 而我还是觉得我们的不同比他们还大 
-一定要照顾好自己 一直都好好的
+一定要照顾好自己 一直都好好的 
+
+
+吃饭的时候又担心你没有好好吃饭 我现在也不知道分开是不是对的 
+只是我现在能给你的太少了 而且有着这么大的裂痕 在下去也会是很大的伤痛 
+希望你赶紧好起来
+--- 2014-12-29
 </pre>
 </body>
