upload new demo

--- a/Demos.html
+++ b/Demos.html
@@ -10,5 +10,10 @@
 	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/siliSelector.plist">
 	    <font size=6>click this link to install siliSelector</font>
 	</a>
+	<br>
+	<br>
+	<a href="itms-services://?action=download-manifest&url=https://xuxiaojiang.github.io/SyncContact.plist">
+	    <font size=6>click this link to install SyncContact</font>
+	</a>
 </body>
 </html?
